hphp/hack/test/enum_class/typing/typing.extends6.bad.php.exp
File "typing.extends6.bad.php", line 22, characters 6-15:
Enum NormalEnum includes enum E but their base types are incompatible (Typing[4388])
File "typing.extends6.bad.php", line 22, characters 6-15:
Enums can only extend int, string, or arraykey. (Typing[4115])
  File "typing.extends6.bad.php", line 17, characters 12-12:
  This is an enum class.
